# note

./: README.md
cmake/: cmakelists_note.md
cmake/src/: CMakeLists.txt  CMakeLists_gcc.cmake
makefile/: makefile.md
s_makefile/01/: demo1.cpp  makefile
s_makefile/02/: Makefile  demo1.cpp  main.cpp
s_makefile/03/: Makefile  demo.cpp  demo.h  main.cpp
s_makefile/04/: Makefile
s_makefile/05/: Makefile
s_makefile/05/subdir/: Makefile  demo
shell/: shell.md
